# x402-sdk

./: .gitignore  README.md  SECURITY.md  justfile  package.json
.github/workflows/: ci.yml
rust/: Cargo.toml
rust/src/: constants.rs  error.rs  lib.rs  siwx.rs
rust/src/client/exact/: mod.rs  payment.rs
rust/src/protocol/schemes/exact/: mod.rs  types.rs  verify.rs
rust/src/server/: exact.rs  mod.rs
tests/interop/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
tests/interop/src/: contracts.ts  implementations.ts  process.ts
tests/interop/src/fixtures/typescript/: client.ts  server.ts  shared.ts
tests/interop/test/: e2e.test.ts  process.test.ts
typescript/: README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
